--- a/scp-002.html
+++ b/scp-002.html
@@ -18,7 +18,7 @@
                 <a href="scp-006.html">SCP 006</a>
             </nav>
             <div class="content">
-                <p><img src="/SCP Subject Files/images/acsbar-002.png"></p>
+                <p><img src="images/acsbar-002.png"></p>
                 <p><img src="images/SCP-002.jpg"></p>
                 <h3>Special Containment Procedures:</h3>
                 <p>SCP-002 is to remain connected to a suitable power supply at all times, to keep it in what appears to be a recharging mode. In case of electrical outage, the emergency barrier between the object and the facility is to be closed and the immediate area evacuated. Once facility power is re-established, alternating bursts of X-ray and ultraviolet light must strobe the area until SCP-002 is re-affixed to the power supply and returned to recharging mode. Containment area is to be kept at negative air pressure at all times.</p>
