--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2>Welcome to the SCP Foundation</h2>
             <p>The SCP Foundation is committed to securing, containing, and protecting anomalous objects, entities, and phenomena that defy natural law. Our mission is to safeguard humanity from the unknown, ensuring that these anomalies remain hidden and contained. You are now entering a classified zone. Explore our vast database of top-secret documents and uncover the strange, the unexplained, and the perilous. Proceed with caution—what you learn may challenge everything you thought you knew.</p>
             <h3>Here is a look at a SCP Anomaly Classification System (ACS) Guide:</h3>
-            <p><img src="/SCP Subject Files/images/SCP acs diagram.png"></p>
+            <p><img src="images/SCP acs diagram.png"></p>
         </div>
         <footer>
             &copy;2025 SCP Foundation. All Rights Reserved.
