--- a/scp-003.html
+++ b/scp-003.html
@@ -18,7 +18,7 @@
                 <a href="scp-006.html">SCP 006</a>
             </nav>
             <div class="content">
-                <p><img src="/SCP Subject Files/images/acsbar-003.png"></p>
+                <p><img src="images/acsbar-003.png"></p>
                 <h3>Special Containment Procedures:</h3>
                 <p>SCP-003 is to be maintained at a constant temperature of no less than 35°C and ideally kept above 100°C. No living multicellular organisms of Category IV or higher complexity may be allowed to come into contact with SCP-003.</p>
                 <p>In event of total power failure, if SCP-003-1 begins to increase its mass, assigned personnel must engage in skin contact with SCP-003-1. Ideally, personnel may use their body heat to return SCP-003-1 to above the critical temperature; however, skin contact must be maintained even in event of SCP-003 reaching activation temperature, lasting at minimum until SCP-003-1 advances fully to its second growth stage.</p>
