--- a/scp-005.html
+++ b/scp-005.html
@@ -18,7 +18,7 @@
                 <a href="scp-006.html">SCP 006</a>
             </nav>
             <div class="content">
-                <p><img src="/SCP Subject Files/images/acsbar-005.png"></p>
+                <p><img src="images/acsbar-005.png"></p>
                 <h3>Special Containment Procedures:</h3>
                 <p>SCP-005 poses no immediate risk in any direct sense. Even so, its unique functions require special measures be taken to restrict access and manipulation of the object. Approval of at least one (1) Level 4 personnel is required for the removal of the object from its containment area.</p>
             
