--- a/scp-006.html
+++ b/scp-006.html
@@ -18,7 +18,7 @@
                 <a href="scp-006.html">SCP 006</a>
             </nav>
             <div class="content">
-                <p><img src="/SCP Subject Files/images/acsbar-006.png"></p>
+                <p><img src="images/acsbar-006.png"></p>
                 <h3>Special Containment Procedures:</h3>
                 <p>Whereas the nature of SCP-006 does not warrant any extensive containment, a certain level of secrecy is necessary regarding the object's existence and properties, for obvious reasons. The following procedures are required not for personnel safety, but to deny or hide knowledge of SCP-006's effects from the personnel who interact with it.</p>
                 <p>
